my second commit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
 
     volumes:
       - ./postgres_db:/var/lib/postgresql/data
+
   web:
     restart: always
     env_file: ./piedpiper/config/.env
@@ -17,10 +18,7 @@ services:
     container_name: piedpiper
     build: ./
     command: >
-      bash -c "python wait_for_postgres.py && 
-      ./manage.py makemigrations users &&
-      ./manage.py migrate &&
-      ./manage.py runserver 0.0.0.0:8000"
+      bash -c "python wait_for_postgres.py && ./manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./:/code
     ports:
