--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Core
+django-spa==0.3.5
 pytz==2018.9
 Django==2.2
 #Django==1.11
@@ -47,5 +48,5 @@ coverage==4.5.2
 # Static and Media Storage
 # django-storages==1.7.1
 boto3==1.9.93
-whitenoise==4.1.2
+# whitenoise==4.1.2
 django-environ==0.4.5 
